--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A site for the NPM package CBF",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.15",
-    "@types/node": "12.0.10",
-    "@types/react": "16.8.22",
-    "@types/react-dom": "16.8.4",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.10",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.1.16",
     "gh-pages": "^2.0.1",
     "husky": "^2.7.0",
@@ -23,7 +23,7 @@
     "styled-components": "^4.3.2",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
-    "typescript": "3.5.2"
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -32,7 +32,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "lint": "tslint -c tslint.json 'src/**/*.tsx'",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(react-github-btn))/\"",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject"
   },
